--- a/app/admin/monitor/[eventId]/_components/MonitorQuestion/MonitorAnswer.module.css
+++ b/app/admin/monitor/[eventId]/_components/MonitorQuestion/MonitorAnswer.module.css
@@ -1,11 +1,7 @@
 .root {
   display: flex;
   flex-direction: column;
-  background-image: url("/quiz_background.jpeg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 40px 0;
+  gap: 60px;
 }
 
 .main {
