--- a/app/admin/monitor/[eventId]/_components/MonitorQuestion/components/QuestionPanel/QuestionPanel.module.css
+++ b/app/admin/monitor/[eventId]/_components/MonitorQuestion/components/QuestionPanel/QuestionPanel.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 145px;
+  min-width: 145px;
   align-self: stretch;
   padding: 10px;
   background: linear-gradient(
@@ -26,15 +26,16 @@
 }
 
 .sentence {
-  width: 80%;
-  padding: 32px;
+  min-width: 80%;
+  max-height: 100%;
+  padding: 24px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   writing-mode: vertical-rl;
   text-orientation: upright;
-  font-size: 32px;
+  font-size: 24px;
   background: rgba(230, 230, 230, 0.7);
   color: #002aff;
   border-radius: 32px;
