--- a/app/admin/monitor/[eventId]/_components/MonitorResult/RankingRow/RankingRow.module.css
+++ b/app/admin/monitor/[eventId]/_components/MonitorResult/RankingRow/RankingRow.module.css
@@ -7,6 +7,7 @@
   padding: 10px;
   border-radius: 8px 50px 50px 8px;
   overflow: hidden;
+  gap: 20px;
 }
 
 .rootRank1 {
@@ -45,7 +46,9 @@
   display: flex;
   align-items: center;
   width: 475px;
-  padding: 0 32px;
+  height: 100%;
+  overflow: auto;
+  overflow-wrap: break-word;
   font-size: 32px;
   font-weight: 700;
   text-align: center;
