--- a/app/admin/monitor/[eventId]/_components/MonitorQuestion/components/QuestionPanel/QuestionPanel.module.css
+++ b/app/admin/monitor/[eventId]/_components/MonitorQuestion/components/QuestionPanel/QuestionPanel.module.css
@@ -27,7 +27,7 @@
 
 .sentence {
   min-width: 80%;
-  max-height: 100%;
+  max-height: 800px;
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -39,6 +39,7 @@
   background: rgba(230, 230, 230, 0.7);
   color: #002aff;
   border-radius: 32px;
+  overflow: auto;
 }
 
 .questionNumber {
